--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,4 +13,5 @@
     <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="shortcut icon" href="http://cfs.tistory.com/custom/blog/0/1350/favicon.ico"/>
 </head>
