--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,17 +2,18 @@
  * Site header
  */
 .site-header {
-    // border-top: 5px solid $grey-color-dark;
+    //border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
+    height: 40px;
+    width: 100%;
+    background-color: $background-color;
 
     // Positioning context for the mobile navigation icon
-    position: relative;
+    position: fixed;
 }
 
 .site-title {
-    font-size: 26px;
-    line-height: 56px;
+    font-size: 22px;
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
@@ -25,7 +26,7 @@
 
 .site-nav {
     float: right;
-    line-height: 56px;
+    line-height: 36px;
 
     .menu-icon {
         display: none;
@@ -188,7 +189,13 @@
     font-size: 24px;
 }
 
+.post {
+    margin-top: 30px;
+}
 
+.home {
+    margin-top: 30px;
+}
 
 /**
  * Posts
