--- a/css/main.scss
+++ b/css/main.scss
@@ -3,10 +3,10 @@
 ---
 @charset "utf-8";
 
-
+@import url(//fonts.googleapis.com/earlyaccess/jejugothic.css);
 
 // Our variables
-$base-font-family: 'Noto Sans', sans-serif;
+$base-font-family: 'Jeju Gothic', sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
