--- a/css/main.scss
+++ b/css/main.scss
@@ -3,9 +3,6 @@
 ---
 @charset "utf-8";
 
-
-@import url(//fonts.googleapis.com/earlyaccess/jejugothic.css);
-
 // Our variables
 $base-font-family: 'Jeju Gothic', sans-serif;
 $base-font-size:   16px;
@@ -51,3 +48,14 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+@font-face {
+  font-family: 'Jeju Gothic';
+  font-style: normal;
+  font-weight: 400;
+  src: url(//fonts.gstatic.com/ea/jejugothic/v3/JejuGothic-Regular.eot);
+  src: url(//fonts.gstatic.com/ea/jejugothic/v3/JejuGothic-Regular.eot?#iefix) format('embedded-opentype'),
+  url(//fonts.gstatic.com/ea/jejugothic/v3/JejuGothic-Regular.woff2) format('woff2'),
+  url(//fonts.gstatic.com/ea/jejugothic/v3/JejuGothic-Regular.woff) format('woff'),
+  url(//fonts.gstatic.com/ea/jejugothic/v3/JejuGothic-Regular.ttf) format('truetype');
+}
