--- a/css/main.scss
+++ b/css/main.scss
@@ -46,6 +46,5 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
-        "syntax-highlighting",
-        "fonts"
+        "syntax-highlighting"
 ;
