--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,64 +15,56 @@
 
     <div class="wrapper">
 
-        <h2 class="footer-heading">{{ site.title }}</h2>
+        <h2 class="footer-heading">{{ site.title | escape }}</h2>
 
         <div class="footer-col-wrapper">
-            <div class="footer-col  footer-col-1">
+            <div class="footer-col footer-col-1">
                 <ul class="contact-list">
-                    <li>{{ site.title }}</li>
-                    <li><a class="fa fa-home fa-fw" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+                    <li>
+                        {% if site.author %}
+                        {{ site.author | escape }}
+                        {% else %}
+                        {{ site.title | escape }}
+                        {% endif %}
+                    </li>
+                    {% if site.email %}
+                    <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+                    {% endif %}
                 </ul>
             </div>
 
-            <div class="footer-col  footer-col-2">
+            <div class="footer-col footer-col-2">
                 <ul class="social-media-list">
                     {% if site.github_username %}
                     <li>
-                        <i class="fa fa-github fa-lg"></i>
-                        <a href="https://github.com/{{ site.github_username }}">
-                            <span class="username">{{ site.github_username }}</span>
-                        </a>
+                        {% include icon-github.html username=site.github_username %}
                     </li>
                     {% endif %}
 
                     {% if site.twitter_username %}
                     <li>
-                        <i class="fa fa-twitter-square fa-lg"></i>
-                        <a href="https://twitter.com/{{ site.twitter_username }}">
-                            <span class="username">{{ site.twitter_username }}</span>
-                        </a>
+                        {% include icon-twitter.html username=site.twitter_username %}
                     </li>
                     {% endif %}
-
-                    {% if site.blog %}
-                    <li>
-                        <i class="fa fa-home fa-lg"></i>
-                        <a href="http://blog.claztec.net">
-                            <span class="username">home</span>
-                        </a>
-                    </li>
-                    {% endif %}
-
                 </ul>
             </div>
 
-            <div class="footer-col  footer-col-3">
-                <p class="text">{{ site.description }}</p>
+            <div class="footer-col footer-col-3">
+                <p>{{ site.description | escape }}</p>
                 <div>
-                <script>
-                (function() {
-                    var cx = '009009887576837942462:xm5hm8vg_ko';
-                    var gcse = document.createElement('script');
-                    gcse.type = 'text/javascript';
-                    gcse.async = true;
-                    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-                        '//cse.google.com/cse.js?cx=' + cx;
-                    var s = document.getElementsByTagName('script')[0];
-                    s.parentNode.insertBefore(gcse, s);
-                })();
-                </script>
-                <gcse:searchbox-only></gcse:searchbox-only>
+                    <script>
+                        (function() {
+                            var cx = '009009887576837942462:xm5hm8vg_ko';
+                            var gcse = document.createElement('script');
+                            gcse.type = 'text/javascript';
+                            gcse.async = true;
+                            gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+                                '//cse.google.com/cse.js?cx=' + cx;
+                            var s = document.getElementsByTagName('script')[0];
+                            s.parentNode.insertBefore(gcse, s);
+                        })();
+                    </script>
+                    <gcse:searchbox-only></gcse:searchbox-only>
                 </div>
             </div>
         </div>
