--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,18 +2,18 @@
  * Site header
  */
 .site-header {
-    //border-top: 5px solid $grey-color-dark;
+    border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
-    height: 40px;
-    width: 100%;
-    background-color: $background-color;
+    min-height: $spacing-unit * 1.865;
 
     // Positioning context for the mobile navigation icon
-    position: fixed;
+    position: relative;
 }
 
 .site-title {
-    font-size: 22px;
+    @include relative-font-size(1.625);
+    font-weight: 300;
+    line-height: $base-line-height * $base-font-size * 2.25;
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
@@ -26,7 +26,11 @@
 
 .site-nav {
     float: right;
-    line-height: 36px;
+    line-height: $base-line-height * $base-font-size * 2.25;
+
+    .nav-trigger {
+        display: none;
+    }
 
     .menu-icon {
         display: none;
@@ -36,20 +40,29 @@
         color: $text-color;
         line-height: $base-line-height;
 
-        // Gaps between nav items, but not on the first one
-        &:not(:first-child) {
-            margin-left: 20px;
+        // Gaps between nav items, but not on the last one
+        &:not(:last-child) {
+            margin-right: 20px;
         }
     }
 
     @include media-query($on-palm) {
         position: absolute;
         top: 9px;
-        right: 30px;
+        right: $spacing-unit / 2;
         background-color: $background-color;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
         text-align: right;
+
+        label[for="nav-trigger"] {
+            display: block;
+            float: right;
+            width: 36px;
+            height: 36px;
+            z-index: 2;
+            cursor: pointer;
+        }
 
         .menu-icon {
             display: block;
@@ -60,22 +73,17 @@
             padding-top: 10px;
             text-align: center;
 
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
+            > svg path {
+                fill: $grey-color-dark;
             }
         }
 
-        .trigger {
+        input ~ .trigger {
             clear: both;
             display: none;
         }
 
-        &:hover .trigger {
+        input:checked ~ .trigger {
             display: block;
             padding-bottom: 5px;
         }
@@ -83,6 +91,11 @@
         .page-link {
             display: block;
             padding: 5px 10px;
+
+            &:not(:last-child) {
+                margin-right: 0;
+            }
+            margin-left: 20px;
         }
     }
 }
@@ -98,7 +111,7 @@
 }
 
 .footer-heading {
-    font-size: 18px;
+    @include relative-font-size(1.125);
     margin-bottom: $spacing-unit / 2;
 }
 
@@ -109,7 +122,7 @@
 }
 
 .footer-col-wrapper {
-    font-size: 15px;
+    @include relative-font-size(0.9375);
     color: $grey-color;
     margin-left: -$spacing-unit / 2;
     @extend %clearfix;
@@ -167,7 +180,7 @@
 }
 
 .page-heading {
-    font-size: 20px;
+    @include relative-font-size(1.25);
 }
 
 .post-list {
@@ -186,16 +199,10 @@
 
 .post-link {
     display: block;
-    font-size: 24px;
+    @include relative-font-size(1.5);
 }
 
-.post {
-    margin-top: 30px;
-}
 
-.home {
-    margin-top: 30px;
-}
 
 /**
  * Posts
@@ -205,12 +212,12 @@
 }
 
 .post-title {
-    font-size: 38px;
+    @include relative-font-size(2.625);
     letter-spacing: -1px;
     line-height: 1;
 
     @include media-query($on-laptop) {
-        font-size: 36px;
+        @include relative-font-size(2.25);
     }
 }
 
@@ -218,26 +225,26 @@
     margin-bottom: $spacing-unit;
 
     h2 {
-        font-size: 30px;
+        @include relative-font-size(2);
 
         @include media-query($on-laptop) {
-            font-size: 28px;
+            @include relative-font-size(1.75);
         }
     }
 
     h3 {
-        font-size: 24px;
+        @include relative-font-size(1.625);
 
         @include media-query($on-laptop) {
-            font-size: 22px;
+            @include relative-font-size(1.375);
         }
     }
 
     h4 {
-        font-size: 18px;
+        @include relative-font-size(1.25);
 
         @include media-query($on-laptop) {
-            font-size: 18px;
+            @include relative-font-size(1.125);
         }
     }
 }
