--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,8 +1,9 @@
 @charset "utf-8";
 
 // Define defaults for each variable.
+@import url(//fonts.googleapis.com/earlyaccess/jejugothic.css);
 
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$base-font-family: 'Jeju Gothic', sans-serif !default;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
