본문 폰트 컬러 수정

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -25,6 +25,8 @@ $content-width:    800px !default;
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
 
+$content-color:    #677680 !default;
+
 // Use media queries like this:
 // @include media-query($on-palm) {
 //   .wrapper {
