--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,6 +17,9 @@ layout: default
             <h2>
                 <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
             </h2>
+            <p>
+                {{ post.content | strip_html | truncatewords:30 }}
+            </p>
         </li>
         {% endfor %}
     </ul>
