레이아웃 수정

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,11 @@
         <h2 class="footer-heading">{{ site.title | escape }}</h2>
 
         <div class="footer-col-wrapper">
+            <ul>
+                <li><a href="/about">about</a></li>
+                <li><a href="/archive.html">archive</a></li>
+            </ul>
+
             <div class="footer-col footer-col-1">
                 <ul class="contact-list">
                     <li>
