--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,6 +2,7 @@
 
 // Define defaults for each variable.
 @import url(//fonts.googleapis.com/earlyaccess/jejugothic.css);
+@import url(//fonts.googleapis.com/icon?family=Material+Icons);
 
 $base-font-family: 'Jeju Gothic', sans-serif !default;
 $base-font-size:   16px !default;
@@ -20,7 +21,7 @@ $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
 // Width of the content area
-$content-width:    800px !default;
+$content-width:    900px !default;
 
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
