--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,12 @@
                 {% for path in page_paths %}
                 {% assign my_page = site.pages | where: "path", path | first %}
                 {% if my_page.title %}
-                <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+                <a class="page-link" href="{{ my_page.url | relative_url }}">
+                    {% if my_page.title == 'About' %}
+                    <img class="site-profile" src="//s.gravatar.com/avatar/6aa8ba25fc916b40c2c7ccd30ad69e4d?s=35" alt="derek choi" />
+                    {% else %}
+                    {% endif %}
+                </a>
                 {% endif %}
                 {% endfor %}
             </div>
