--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -24,6 +24,10 @@
     }
 }
 
+.site-profile {
+    border-radius: 50%;
+}
+
 .site-nav {
     float: right;
     line-height: $base-line-height * $base-font-size * 2.25;
