페이징 설정

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
     <h1 class="page-heading">Posts</h1>
 
     <ul class="post-list">
-        {% for post in paginator.posts %}
+        {% for post in site.posts %}
         <li>
             {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
             <span class="post-meta">{{ post.date | date: date_format }}</span>
