--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     <div class="wrapper">
         {{ content }}
     </div>
+    {% include google-adsence.html %}
 </main>
 
 {% include footer.html %}
