--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
 
 {% include footer.html %}
 
+<script id="dsq-count-scr" src="//claztec-hacks.disqus.com/count.js" async></script>
+
 </body>
 
 </html>
