--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
         <div class="footer-col-wrapper">
             <ul>
                 <li><a href="/about">about</a></li>
-                <li><a href="/archive.html">archive</a></li>
+                <li><a href="/archive">archive</a></li>
             </ul>
 
             <div class="footer-col footer-col-1">
